<resources>
    <string name="app_name">The Anime Database</string>
    <string name="more">More</string>
    <string name="anime_image_desc">Anime Image</string>
    <string name="anime_details_mean_label">Score:</string>
    <string name="anime_details_rank_label">Rank:</string>
    <string name="anime_details_popularity_label">Popularity:</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End_date:</string>
    <string name="status">Status:</string>
    <string name="numEps">Num. episodes:</string>
    <string name="synopsis">Synopsis:</string>
</resources>